--- a/Assignment 1/Assignment_1.html
+++ b/Assignment 1/Assignment_1.html
@@ -11,7 +11,7 @@
         Hey! It looks like a paragraph, but there is a block/box  too. Find that HTML element othat than &ltp> and &lth>
       </div> <br>
       <a href="http://www.google.com" style="color:deeppink"> This a link to Google</a><br>
-      <img src="" alt=""><br>
+      <img src="disneyWorld.jpg" alt="Disney World Image"><br>
       <i>Email me by clicking on <a href="mailto:john.doe@gmail.com">Jon Doe</a><br>
         Visit us at: <br>
         <a href="https://goo.gl/maps/DUcemHuXe4W9ex3n6">Disney World</a><br>
